test/error/compile_error_undeclared_variable/identity/src/Identity.hx
package;

class Identity {
	public static function identity<T>(x:T):T {
		y = 1;
		return x;
	}
}
